<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:padding="15dp"
    android:background="@color/black">


    <androidx.gridlayout.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/cellName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:text="@string/eventName"
            android:textColor="@color/orange"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_column="0"
            app:layout_row="2" />

        <TextView
            android:id="@+id/cellDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/eventDate"
            android:textColor="@color/pink"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_column="0"
            app:layout_row="0" />

        <TextView
            android:id="@+id/cellTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:maxLines="1"
            android:text="@string/eventTime"
            android:textColor="@color/teal_200"
            android:textSize="13sp"
            android:textStyle="bold"
            app:layout_column="0"
            app:layout_row="1" />

        <TextView
            android:id="@+id/cellDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/eventDetails"
            android:textColor="@color/purple_500"
            android:textSize="11sp"
            android:textStyle="bold"
            app:layout_column="0"
            app:layout_row="3"
            tools:ignore="TextContrastCheck" />
    </androidx.gridlayout.widget.GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>